[gd_scene load_steps=14 format=3 uid="uid://qllip7vlobs6"]

[ext_resource type="Script" uid="uid://gu0ng8yhi8wd" path="res://Enemies/FlyingHead/flying_head.gd" id="1_urndj"]
[ext_resource type="Shader" uid="uid://c5lt2cy2aonh5" path="res://Both/Shaders/new_teleport.gdshader" id="2_ytw1b"]
[ext_resource type="Script" uid="uid://wvyjj1cwm6rh" path="res://StateMachine/state_machine.gd" id="3_6ism7"]
[ext_resource type="Script" uid="uid://bilfng4ahdhsk" path="res://Enemies/FlyingHead/moving.gd" id="4_dn8th"]
[ext_resource type="Script" uid="uid://byxut1ep6i60f" path="res://Enemies/FlyingHead/hurt.gd" id="5_n1ptx"]

[sub_resource type="Animation" id="Animation_m8f5w"]
resource_name = "Destroyed"
length = 0.78
step = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36, 0.42, 0.48, 0.54, 0.6, 0.66, 0.72, 0.78),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_57apd"]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_8crib"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tiis3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:instance_shader_parameters/progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.25]
}

[sub_resource type="Animation" id="Animation_ytw1b"]
resource_name = "Spawn"
length = 0.6
step = 0.06
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:instance_shader_parameters/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.588235),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.18, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_735dd"]
_data = {
&"Destroyed": SubResource("Animation_m8f5w"),
&"Hurt": SubResource("Animation_57apd"),
&"Idle": SubResource("Animation_8crib"),
&"RESET": SubResource("Animation_tiis3"),
&"Spawn": SubResource("Animation_ytw1b")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tdh1p"]
shader = ExtResource("2_ytw1b")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ytw1b"]
load_path = "res://.godot/imported/flying_head.png-a2e068c8d3458ce204928a7c9ecb6ec8.ctex"

[node name="FlyingHead" type="CharacterBody2D"]
light_mask = 2
visibility_layer = 2
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("1_urndj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../Sprite")
libraries = {
&"": SubResource("AnimationLibrary_735dd")
}

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_tdh1p")
instance_shader_parameters/beam_size = 0.05
instance_shader_parameters/color = Color(1, 0, 0, 1)
instance_shader_parameters/progress = 0.25
scale = Vector2(4, 4)
texture = SubResource("CompressedTexture2D_ytw1b")
hframes = 8
vframes = 8

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
unique_name_in_owner = true
polygon = PackedVector2Array(-32, 4, -16, 32, 16, 32, 32, 4, 32, -20, 24, -32, -24, -32, -32, -20)

[node name="StateLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -19.0
offset_top = -57.0
offset_right = 21.0
offset_bottom = -34.0
text = "State"

[node name="DirectionLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -19.0
offset_top = 39.0
offset_right = 21.0
offset_bottom = 62.0
text = "Dir"

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_6ism7")

[node name="Moving" type="Node" parent="StateMachine"]
unique_name_in_owner = true
script = ExtResource("4_dn8th")

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("5_n1ptx")

[node name="HurtTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.3
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Moving" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="HurtTimer" to="StateMachine/Hurt" method="_on_hurt_timer_timeout"]
